chore : payload server config done

--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
-PAYLOAD_SECRET = vishnuswaroopisking
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+# Any value works here, should be somewhat secure
+PAYLOAD_SECRET=vishnuswaroopisking
+
+# Database - either MongoDB or Postgres work
+MONGODB_URL=mongodb+srv://devprojects:g0nrORgT3HO6UvSe@cluster0.rznijsc.mongodb.net/?retryWrites=true&w=majority
+
+# Payments
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# Email
+RESEND_API_KEY=kmwa ozzx agsc nihs
