--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 
 # Email
-RESEND_API_KEY=kmwa ozzx agsc nihs
+RESEND_API_KEY="re_L78JrHiW_HLim5iuTLc467z3CSUXaeC1Z"
